--- a/app.json
+++ b/app.json
@@ -4,7 +4,6 @@
     "slug": "tution-app",
     "version": "1.0.0",
     "orientation": "portrait",
-
     "scheme": "tutionapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,13 +12,11 @@
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.rahulcoolboy.tutionapp"
     },
     "web": {
       "output": "static",
@@ -30,7 +27,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/splash.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
@@ -43,6 +40,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "93428116-5116-4d2e-aca4-26be6a865698"
+      }
     }
   }
 }
